--- a/blooketmain.html
+++ b/blooketmain.html
@@ -2,13 +2,20 @@
 <html lang="en">
     <head>
         <title>Blooket Maker</title>
-        <script src="blooketrunner.js"></script>
+        <script src="blooketrunner.js" type="text/javascript"></script>
         <link href="blooketstylesheet.css" rel="stylesheet">
     </head>
     <body>
+        <label for="defaultdropdown" id="dropdownlabel">Default: select an option if it pertains to what you want to make the blooket like. example: If you want your questions to be english words and you want answers to be their definitions, select the english dictionary default.</label>
+        <select id="defaultdropdown" name="defaultdropdown">
+            <option value="none">None</option>
+            <option value="english">English Dictionary</option>
+        </select>
+        <form>
             <label for="forminput">Input:</label>
             <textarea contenteditable="true" id="forminput"></textarea>
-            <button id="submit" title="Generate" onclick="constructBlooket()">Generate</button>
+            <button><submit id="submit" title="Generate" onsubmit="initConstruct()">Generate</submit></button>
+        </form>
         <p id="outputarea">Content will appear here</p>
     </body>
 </html>
